--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <title>Recipes</title>
     </head>
     <body>
-
+        <h1>Odin Recipes</h1>
+        <ul>
+            <a href="recipes/pizza.html">Pizza</a>
+            <a href="recipes/Milanesa.html">Milanesa</a>
+            <a href="recipes/Hamburguesa.html">Hamburguesa</a> 
+        </ul>
+        
     </body>
 </html>
